# lmsysmd

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel
.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTg0MjU2NjA0MA==
.github/workflows/: biome.yaml  buf.yaml
go/: BUILD.bazel  go.mod  go.sum
go/cmd/lmsysmd/: BUILD.bazel  external.go  main.go
go/cmd/lmsysmd/handler/rating/: BUILD.bazel  rating.go
go/lib/context/value/: BUILD.bazel  value.go
go/lib/handler/static/: BUILD.bazel  static.go
go/lib/middleware/buf/validate/: BUILD.bazel  validate.go
go/lib/middleware/clerk/: BUILD.bazel  clerk.go
go/lib/middleware/static/: BUILD.bazel  static.go
go/patches/: godotenvvault.patch
go/pb/lmsysmd/load/data/v1/: BUILD.bazel  data.go  data_test.go
go/pb/lmsysmd/load/model/v1/: BUILD.bazel
go/pb/lmsysmd/rating/v1/: BUILD.bazel  rating.go
go/pb/lmsysmd/sample/v1/: BUILD.bazel  sample.go
hcl/schema/: BUILD.bazel  README.md
hcl/schema/lmsysmd/: BUILD.bazel  schema.hcl
pb/: BUILD.bazel  README.md  buf.gen.yaml  buf.yaml
pb/lmsysmd/load/data/v1/: data.proto
pb/lmsysmd/load/model/v1/: model.proto
pb/lmsysmd/load/v1/: model.proto
pb/lmsysmd/rating/v1/: rating.proto
pb/lmsysmd/sample/v1/: sample.proto
prod/: README.md
prod/lmsysmd/: BUILD.bazel  fly.toml
ts/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
ts/env/: package.json
ts/env/lmsysmd/: .env.vault.in  BUILD.bazel
ts/lib/: BUILD.bazel  package.json
ts/lib/clerk/token/: hook.ts
ts/patches/: dotenv-vault@1.26.2.patch
