load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

npm_package(
    name = "lib",
    srcs = [":lib_src"],
    visibility = ["//visibility:public"],
)

js_library(name = "lib_src")
