load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lmsysmd_lib",
    srcs = [
        "external.go",
        "main.go",
    ],
    embedsrcs = [
        ":ts",  # keep
    ],
    importpath = "github.com/Lev1ty/lmsysmd/cmd/lmsysmd",
    visibility = ["//visibility:private"],
    deps = [
        "//go/cmd/lmsysmd/handler/rating",
        "//go/lib/handler/static",
        "//go/lib/middleware/buf/validate",
        "//go/lib/middleware/clerk",
        "//go/pb/lmsysmd/sample/v1:sample",
        "//go/pb/lmsysmd/sample/v1:sample_connect",
        "@com_connectrpc_connect//:connect",
        "@com_github_dotenv_org_godotenvvault//:godotenvvault",
        "@com_github_ulule_limiter_v3//:limiter",
        "@com_github_ulule_limiter_v3//drivers/store/memory",
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
    ],
)

copy_to_directory(
    name = "ts",
    srcs = ["//ts/bin/lmsysmd"],
    root_paths = ["ts/bin/lmsysmd/out"],
)

go_binary(
    name = "lmsysmd",
    data = ["//ts/env/lmsysmd"],
    embed = [":lmsysmd_lib"],
    env = {"ENV": "$(rootpath //ts/env/lmsysmd)"},
    static = select({
        "//:opt": "on",
        "//conditions:default": "auto",
    }),
    visibility = ["//visibility:public"],
)
