load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "clerk",
    srcs = ["clerk.go"],
    importpath = "github.com/Lev1ty/lmsysmd/lib/middleware/clerk",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/context/value",
        "@com_connectrpc_connect//:connect",
        "@com_github_clerk_clerk_sdk_go_v2//:clerk-sdk-go",
        "@com_github_clerk_clerk_sdk_go_v2//http",
        "@com_github_clerk_clerk_sdk_go_v2//jwt",
    ],
)
