load("@bazel_skylib//rules:select_file.bzl", "select_file")
load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "rating",
    srcs = ["rating.go"],
    importpath = "github.com/Lev1ty/lmsysmd/pb/lmsysmd/rating/v1",
    visibility = ["//visibility:public"],
    deps = [
        ":rating_connect",
        ":rating_pb",
        "//go/lib/context/value",
        "@com_connectrpc_connect//:connect",
        "@com_github_clerk_clerk_sdk_go_v2//:clerk-sdk-go",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgxpool",
    ],
)

go_library(
    name = "rating_connect",
    srcs = [":rating_connect_go"],
    importpath = "github.com/Lev1ty/lmsysmd/pbi/lmsysmd/rating/v1/ratingv1connect",
    visibility = ["//visibility:public"],
    deps = [
        ":rating_pb",
        "@com_connectrpc_connect//:connect",
    ],
)

select_file(
    name = "rating_connect_go",
    srcs = "//pb:gen",
    subpath = "go/lmsysmd/rating/v1/ratingv1connect/rating.connect.go",
)

go_library(
    name = "rating_pb",
    srcs = [":rating_pb_go"],
    importpath = "github.com/Lev1ty/lmsysmd/pbi/lmsysmd/rating/v1",
    visibility = ["//visibility:public"],
    deps = [
        "@build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go//buf/validate",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)

select_file(
    name = "rating_pb_go",
    srcs = "//pb:gen",
    subpath = "go/lmsysmd/rating/v1/rating.pb.go",
)
