load("@bazel_skylib//rules:select_file.bzl", "select_file")
load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "sample",
    srcs = ["sample.go"],
    importpath = "github.com/Lev1ty/lmsysmd/pb/lmsysmd/sample/v1",
    visibility = ["//visibility:public"],
    deps = [
        ":sample_connect",
        ":sample_pb",
        "@com_connectrpc_connect//:connect",
    ],
)

go_library(
    name = "sample_connect",
    srcs = [":sample_connect_go"],
    importpath = "github.com/Lev1ty/lmsysmd/pbi/lmsysmd/sample/v1/samplev1connect",
    visibility = ["//visibility:public"],
    deps = [
        ":sample_pb",
        "@com_connectrpc_connect//:connect",
    ],
)

select_file(
    name = "sample_connect_go",
    srcs = "//pb:gen",
    subpath = "go/lmsysmd/sample/v1/samplev1connect/sample.connect.go",
)

go_library(
    name = "sample_pb",
    srcs = [":sample_pb_go"],
    importpath = "github.com/Lev1ty/lmsysmd/pbi/lmsysmd/sample/v1",
    visibility = ["//visibility:public"],
    deps = [
        "@build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go//buf/validate",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)

select_file(
    name = "sample_pb_go",
    srcs = "//pb:gen",
    subpath = "go/lmsysmd/sample/v1/sample.pb.go",
)
