load("@bazel_skylib//rules:select_file.bzl", "select_file")
load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "data",
    srcs = ["data.go"],
    importpath = "github.com/Lev1ty/lmsysmd/pb/lmsysmd/load/data/v1",
    visibility = ["//visibility:public"],
    deps = [
        ":data_connect",
        ":data_pb",
        "//go/pb/lmsysmd/load/model/v1:model_pb",
        "@com_connectrpc_connect//:connect",
        "@com_github_jackc_pgx_v5//pgxpool",
        "@org_golang_google_api//drive/v3:drive",
        "@org_golang_google_api//option",
        "@org_golang_google_api//sheets/v4:sheets",
        "@org_golang_x_oauth2//google",
        "@org_golang_x_oauth2//jwt",
        "@com_github_bufbuild_protovalidate_go//:protovalidate-go",
    ],
)

go_library(
    name = "data_connect",
    srcs = [":data_connect_go"],
    importpath = "github.com/Lev1ty/lmsysmd/pbi/lmsysmd/load/data/v1/datav1connect",
    visibility = ["//visibility:public"],
    deps = [
        ":data_pb",
        "@com_connectrpc_connect//:connect",
    ],
)

select_file(
    name = "data_connect_go",
    srcs = "//pb:gen",
    subpath = "go/lmsysmd/load/data/v1/datav1connect/data.connect.go",
)

go_library(
    name = "data_pb",
    srcs = [":data_pb_go"],
    importpath = "github.com/Lev1ty/lmsysmd/pbi/lmsysmd/load/data/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pb/lmsysmd/load/model/v1:model_pb",
        "@build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go//buf/validate",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)

select_file(
    name = "data_pb_go",
    srcs = "//pb:gen",
    subpath = "go/lmsysmd/load/data/v1/data.pb.go",
)

go_test(
    name = "data_test",
    srcs = ["data_test.go"],
    embed = [":data"],
    visibility = ["//visibility:public"],
)
